<resources>
    <string name="app_name">Peek2S</string>
    <string name="app_name_neutral">Quick View</string>

    <string name="video_player_best_fit">最为合适</string>
    <string name="video_player_fit_horizontal">水平匹配</string>
    <string name="video_player_fit_vertical">垂直匹配</string>
    <string name="video_player_fill">填充</string>
    <string name="video_player_16x9">16:9</string>
    <string name="video_player_4x3">4:3</string>
    <string name="video_player_original">居中</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="clear">清空</string>
    <string name="record_miaoshu">抓拍-缺陷描述</string>
    <string name="record_task_id">任务编号</string>
    <string name="record_task_name">任务名称</string>
    <string name="record_task_place">检测地点</string>
    <string name="record_task_start">起始井号</string>
    <string name="record_task_end">结束井号</string>
    <string name="record_task_direction">检测方向</string>
    <string name="record_task_sort">管道类型</string>
    <string name="record_task_guancai">  管材</string>
    <string name="record_task_diameter">管径(mm)</string>
    <string name="record_task_computer">检测单位</string>
    <string name="record_task_people">检测员</string>

    <string name="record_task_id_e">任务编号:</string>
    <string name="record_task_name_e">任务名称:</string>
    <string name="record_task_place_e">检测地点:</string>
    <string name="record_task_start_e">起始井号:</string>
    <string name="record_task_end_e">结束井号:</string>
    <string name="record_task_direction_e">检测方向:</string>
    <string name="record_task_sort_e">管道类型:</string>
    <string name="record_task_guancai_e">管材:</string>
    <string name="record_task_diameter_e">管径(mm):</string>
    <string name="record_task_computer_e">检测单位:</string>
    <string name="record_task_people_e">检测员:</string>

    <string name="record_task_beizhu_e">备注:</string>
    <string name="edit">编辑</string>

    <string name="capture_guandao_id">管道号</string>
    <string name="capture_quexian_list">缺陷列表：</string>
    <string name="capture_quexian_style">类型</string>
    <string name="capture_quexian_name">缺陷名</string>
    <string name="capture_quexian_grade">等级</string>
    <string name="capture_quexian_distance">距离(m)</string>
    <string name="capture_quexian_clock">时钟表示</string>
    <string name="capture_quexian_length">长度(m)</string>

    <string name="capture_guandao_id_e">管道号：</string>
    <string name="capture_quexian_style_e">类型:</string>
    <string name="capture_quexian_name_e">缺陷名:</string>
    <string name="capture_quexian_grade_e">等级:</string>
    <string name="capture_quexian_distance_e">距离(m):</string>
    <string name="capture_quexian_clock_e">时钟表示:</string>
    <string name="capture_quexian_length_e">长度(m):</string>
    <string name="capture_quexian_detail_e">描述：</string>
    <string name="mainFrame">主机:</string>
    <string name="repeater">中继:</string>
    <string name="notLink">未连接</string>
    <string name="link">连接</string>
    <string name="record_task_well_height_edt_e">井高(m):</string>
    <string name="record_task_pipe_length_e">管长(m):</string>
    <string name="record_task_regional_important_e">地区重要性:</string>
    <string name="record_task_soil_effect_e">土质影响:</string>
    <string name="noSignal">无信号</string>
    <string name="alreadyConnect">已连接</string>
    <string name="disConnect">未连接</string>
    <string name="isConnecting">连接中...</string>
    <string name="hasSignal">有信号</string>


    <string name="peek2sUpdate">Peek2SLite程序更新！</string>
    <string name="checkingInternet">正在检查网络 . . .</string>
    <string name="reTry">重试</string>
    <string name="checkUpdateInfo">正在检查更新信息！</string>
    <string name="noVersion">版本号未知</string>
    <string name="noInternet">当前网络不可用，请联网后重试！</string>
    <string name="isCheckingInternet">正在检查网络</string>
    <string name="updateToVersion">确定更新至版本</string>
    <string name="updateSure">确定更新</string>
    <string name="noNeedUpdate">已经是最新版本！</string>
    <string name="isUpdateApp">是否更新程序？</string>
    <string name="updateAppAndClosePreview">确定后将关闭程序预览！</string>
    <string name="next_step">下一步</string>
    <string name="error_pass">密码错误！</string>
    <string name="manufacturer_title">正在修改生产商数据！</string>
    <string name="please_enter_manufacturer_name">请输入生产商名称！</string>
</resources>
